Changes in Version 1.4.1
  o Added 'curveScaleNodeCorrection' argument
  o Added 'palette' and 'theme' functions
      o Colorblind mode is now supported with theme = "colorblind"
  o label.color can now be `NA`, which will make the label white if the average of RGB colors of the node is less than 0.25 * 255

Changes in Version 1.4.0
  o Added the 'pathways' function to highlight shortest paths between sets of nodes
        o In collaboration with Adela M. Isvoranu
  o Added functionality to draw pie graphs as node shape.
      o New arguments: 'pie', 'pieColor', 'pieColor2', and 'pieBorder'
      o In collaboration with Jonas Haslbeck
  o The label.cex argument can now be used in combination with label.scale = FALSE
  o Edge and node labels are now properly centered
  o EBICglasso now acts as alias for graph argument
  o The 'graph' argument in 'qgraph' now gives an error if it is assigned with an unsupported option

Changes in Version 1.3.5
  o The label.cex argument now defaults to 1 if label.scale = FALSE
  o The label.scale.equal argument now can be set to TRUE to make all labels scale equally to the largest cex such that the longest label fits.
     o Can alternatively be a factor or numeric vector indicating which groups of nodes whould have the same label shape
  o Fixed a bug with betweenness computation using pkg = "igraph" argument in centrality()
  o The 'centralityPlot' and 'clusteringPlot' now use an argument 'scale' to set the scale of the x-axis, and print a message when this scale is z-scores or relative.
  o The 'shape' argument can now be used with subplots
  o getWmat now supports 'bootnetResult' objects
  o Fixed a bug with as.igraph not working if there is only 1 edge
  o Added 'smallWorldIndex' function to compute smallworldness of unweighted graph
  o Added arguments 'label.fill.vertical' and 'label.fill.horizontal' to 'qgraph'
  o Apparently  skipped over version 1.3.4

Changes in Version 1.3.3